# ta-toolbox

./: .gitmodules  README.md
gradescope-grading-stats/: Cargo.toml  README.md
gradescope-grading-stats/src/: main.rs  server.rs
gradescope-grading-stats/src/gradescope/: client.rs  mod.rs  stats.rs
project-grades/: .gitignore  Cargo.toml  README.md
project-grades/amnesty/: compute.sh  filter-reponses.py  filtered.csv  gather.sh  responses.csv
project-grades/src/: args.yml  extensions.rs  main.rs  roster.rs  submissions.rs
rosters/: .gitignore  Cargo.toml  README.md
rosters/src/: main.rs
swipe-attendance/: README.md  takeAttendance.rb
tutorials/: gradescope-exam.md  gradescope-makeup-exam.md  gradescope-project.md  gradescope-stats.md  readme.md
