[package]
name = "gradescope-grading-stats"
version = "0.1.0"
authors = ["Vinnie Caprarola <vinnie@vcaprarola.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { package = "reqwest-vcapra1-add-cookies", version = "0.10.8", features = ["blocking", "cookies", "json"] }
rpassword = "0.4"
scraper = "0.12"
urlencoding = "1.1"
clap = "2.33"
serde = "1.0"
serde_json = "1.0"
actix-web = "3"
chrono = "0.4"
